Nueva funcion para eliminar espacio en blanco y cambiar a integer

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "4                           27                  244  "
       ]
      },
-     "execution_count": 156,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "(7385, 12)"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
        "4                           27                  244  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
        "       'STATION WAGON - MID-SIZE', 'PICKUP TRUCK - SMALL'], dtype=object)"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
        "array(['Z', 'D', 'X', 'E', 'N'], dtype=object)"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1068,13 +1068,12 @@
        "4              Armenia                                              NaN"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "register = man.open_cvs()\n",
     "register.head()\n",
     "##registered_vehicles is the file in input folder"
@@ -1082,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1160,7 @@
        "4              Armenia                                              NaN"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1187,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1271,7 @@
        "5            Australia   2016                    18 326 236"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1285,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Number_of_registered_vehicles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>655357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>563106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Antigua and Barbuda</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>36030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>21633587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>18326236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>281312446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>Uruguay</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2342026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>Venezuela (Bolivarian Republic of)</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>7999760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>Viet Nam</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>50666855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>1198584</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>162 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Country   Year  Number_of_registered_vehicles\n",
+       "0                           Afghanistan   2013                         655357\n",
+       "1                               Albania   2016                         563106\n",
+       "2                   Antigua and Barbuda   2016                          36030\n",
+       "3                             Argentina   2016                       21633587\n",
+       "5                             Australia   2016                       18326236\n",
+       "..                                  ...    ...                            ...\n",
+       "158            United States of America   2015                      281312446\n",
+       "159                             Uruguay   2016                        2342026\n",
+       "160  Venezuela (Bolivarian Republic of)   2016                        7999760\n",
+       "161                            Viet Nam   2016                       50666855\n",
+       "162                            Zimbabwe   2017                        1198584\n",
+       "\n",
+       "[162 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##As we can see, the number of registered vehicles is a string type column.We will strip blank spaces and convert\n",
+    "##those values into integers\n",
+    "clean.white_spaces(register,'Number_of_registered_vehicles').head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1432,7 @@
        "'register has been exported to cvs file'"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,13 +1441,6 @@
     "##we save our desired df as cvs file so as to open it in another jupyter-notebook\n",
     "man.export_cvs(register)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
