--- a/emissions_analysis.ipynb
+++ b/emissions_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,6 +407,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CO2 emissions produced by vehicles worldwide"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 130,
    "metadata": {},
@@ -429,20 +436,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### European Comission Expects ZERO CO2 emissions in 2050"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -460,12 +453,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CO2 emissions produced by vehicles worldwide"
+    "### Number of registered vehicles worldwide"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -521,46 +514,46 @@
        "      <th>0</th>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2013</td>\n",
-       "      <td>655 357</td>\n",
+       "      <td>655357</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Albania</td>\n",
        "      <td>2016</td>\n",
-       "      <td>563 106</td>\n",
+       "      <td>563106</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Antigua and Barbuda</td>\n",
        "      <td>2016</td>\n",
-       "      <td>36 030</td>\n",
+       "      <td>36030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Argentina</td>\n",
        "      <td>2016</td>\n",
-       "      <td>21 633 587</td>\n",
+       "      <td>21633587</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Australia</td>\n",
        "      <td>2016</td>\n",
-       "      <td>18 326 236</td>\n",
+       "      <td>18326236</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Country   Year Number_of_registered_vehicles\n",
-       "0          Afghanistan   2013                       655 357\n",
-       "1              Albania   2016                       563 106\n",
-       "2  Antigua and Barbuda   2016                        36 030\n",
-       "3            Argentina   2016                    21 633 587\n",
-       "4            Australia   2016                    18 326 236"
+       "               Country   Year  Number_of_registered_vehicles\n",
+       "0          Afghanistan   2013                         655357\n",
+       "1              Albania   2016                         563106\n",
+       "2  Antigua and Barbuda   2016                          36030\n",
+       "3            Argentina   2016                       21633587\n",
+       "4            Australia   2016                       18326236"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,26 +565,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Number_of_registered_vehicles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>27123655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-2017</td>\n",
+       "      <td>30380771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>1236779436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-2016</td>\n",
+       "      <td>708416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>702411603</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2014-2015</td>\n",
+       "      <td>2339169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>14530641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2013-2014</td>\n",
+       "      <td>12453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>4224548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2012-2016</td>\n",
+       "      <td>69647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>1093229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>56094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1995-2016</td>\n",
+       "      <td>2328185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td></td>\n",
+       "      <td>143000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Country                          0.0\n",
-       "Year                             0.0\n",
-       "Number_of_registered_vehicles    0.0\n",
-       "dtype: float64"
+       "          Year  Number_of_registered_vehicles\n",
+       "0         2017                       27123655\n",
+       "1    2016-2017                       30380771\n",
+       "2         2016                     1236779436\n",
+       "3    2015-2016                         708416\n",
+       "4         2015                      702411603\n",
+       "5    2014-2015                        2339169\n",
+       "6         2014                       14530641\n",
+       "7    2013-2014                          12453\n",
+       "8         2013                        4224548\n",
+       "9    2012-2016                          69647\n",
+       "10        2012                        1093229\n",
+       "11        2007                          56094\n",
+       "12   1995-2016                        2328185\n",
+       "13                                     143000"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "register_2017=register[register['Year']==2013].sum()\n",
-    "register_2017"
+    "register_years=register.groupby('Year').agg({'Number_of_registered_vehicles':'sum'})\n",
+    "register_years=register_years.sort_values(by='Year',ascending=False).reset_index()\n",
+    "register_years"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### European Comission Expects ZERO CO2 emissions in 2050"
    ]
   }
  ],
