vehiculos registrados 2016 OK

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1326,84 +1326,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
-    "register=register[register.Year.isin(['2017','2016','2016-2017'])]\n"
+    "#We will take out registered vehicles in 2016, according to previously analyzed data\n",
+    "register=register[register.Year.isin(['2016','2016-2017'])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Number_of_registered_vehicles</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>27123655</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2016-2017</td>\n",
-       "      <td>30380771</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>1236779436</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Year  Number_of_registered_vehicles\n",
-       "0       2017                       27123655\n",
-       "1  2016-2017                       30380771\n",
-       "2       2016                     1236779436"
-      ]
-     },
-     "execution_count": 135,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "register_years=register.groupby('Year').agg({'Number_of_registered_vehicles':'sum'})\n",
-    "register_years=register_years.sort_values(by='Year',ascending=False).reset_index()\n",
-    "register_years"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1352,7 @@
        "'register has been exported to cvs file'"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
