terminadas multas y vehiculos vendidos

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1003,7 @@
        "4              Armenia                                              NaN"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
        "4              Armenia                                              NaN"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1207,7 @@
        "5            Australia   2016                    18 326 236"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1294,7 @@
        "5            Australia   2016                       18326236"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1381,7 @@
        "5            Australia  2016                       18326236"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,17 +1392,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 169,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Number_of_registered_vehicles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>563106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Antigua and Barbuda</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>36030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>21633587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>18326236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>7421647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>United Republic of Tanzania</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2163623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>281312446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>Uruguay</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2342026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>Venezuela (Bolivarian Republic of)</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>7999760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>Viet Nam</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>50666855</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>135 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Country  Year  Number_of_registered_vehicles\n",
+       "1                               Albania  2016                         563106\n",
+       "2                   Antigua and Barbuda  2016                          36030\n",
+       "3                             Argentina  2016                       21633587\n",
+       "5                             Australia  2016                       18326236\n",
+       "6                               Austria  2016                        7421647\n",
+       "..                                  ...   ...                            ...\n",
+       "157         United Republic of Tanzania  2016                        2163623\n",
+       "158            United States of America  2015                      281312446\n",
+       "159                             Uruguay  2016                        2342026\n",
+       "160  Venezuela (Bolivarian Republic of)  2016                        7999760\n",
+       "161                            Viet Nam  2016                       50666855\n",
+       "\n",
+       "[135 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#We will take out registered vehicles in 2016, according to previously analyzed data\n",
-    "register=register[register.Year.isin(['2016','2016-2017'])]"
+    "register=register[register.Year.isin(['2015','2015-2016','2016','2016-2017'])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1538,7 @@
        "'register has been exported to cvs file'"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
