valores emisiones totales bien sacados y grafico quesitos actualizado

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -24,9 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please, enter the folder where your cvs file is saved:\n",
+      "input\n",
+      "Please, enter the name for the cvs file you want to open without extension:\n",
+      "worldwide_emission_data\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -222,19 +232,20 @@
        "[5 rows x 268 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "emissions1 = pd.read_csv('input/worldwide_emission _data.csv',encoding='latin-1')\n",
-    "emissions1.head()"
+    "emissions1 = man.open_cvs()\n",
+    "emissions1.head()\n",
+    "##worldwide_emission_data in input folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +254,7 @@
        "(231, 268)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +326,7 @@
        "       'Zimbabwe'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -358,42 +369,42 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1751</td>\n",
-       "      <td>9350528</td>\n",
+       "      <td>93505.28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1752</td>\n",
-       "      <td>18704720</td>\n",
+       "      <td>187047.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1753</td>\n",
-       "      <td>28058912</td>\n",
+       "      <td>280589.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1754</td>\n",
-       "      <td>37416768</td>\n",
+       "      <td>374167.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>1755</td>\n",
-       "      <td>46778288</td>\n",
+       "      <td>467782.88</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Year CO2_Tonnes\n",
-       "1  1751    9350528\n",
-       "2  1752   18704720\n",
-       "3  1753   28058912\n",
-       "4  1754   37416768\n",
-       "5  1755   46778288"
+       "   Year  CO2_Tonnes\n",
+       "1  1751    93505.28\n",
+       "2  1752   187047.20\n",
+       "3  1753   280589.12\n",
+       "4  1754   374167.68\n",
+       "5  1755   467782.88"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,12 +415,13 @@
     "world_emissions=world_emissions.reset_index()\n",
     "world_emissions.columns=['Year','CO2_Tonnes']\n",
     "world_emissions=world_emissions.drop(axis=0,index=0)\n",
+    "world_emissions['CO2_Tonnes']=world_emissions['CO2_Tonnes'].map(lambda x: x/1E2)\n",
     "world_emissions.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -434,63 +446,62 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Year</th>\n",
-       "      <th>CO2_emissions</th>\n",
+       "      <th>CO2_Tonnes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1751</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>263</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>1.430000e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1752</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>264</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>1.470000e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1753</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>265</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1.500000e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1754</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>266</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>1.540000e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1755</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>267</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>1.580000e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Year  CO2_emissions\n",
-       "1  1751            0.0\n",
-       "2  1752            0.0\n",
-       "3  1753            0.0\n",
-       "4  1754            0.0\n",
-       "5  1755            0.0"
+       "     Year    CO2_Tonnes\n",
+       "263  2013  1.430000e+10\n",
+       "264  2014  1.470000e+10\n",
+       "265  2015  1.500000e+10\n",
+       "266  2016  1.540000e+10\n",
+       "267  2017  1.580000e+10"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "world_emissions['CO2_emissions']=world_emissions['CO2_Tonnes'].map(lambda x:(x/1e10))\n",
     "clean.rounding(world_emissions)\n",
-    "world_emissions=world_emissions[['Year','CO2_emissions']]\n",
-    "world_emissions.head()"
+    "world_emissions=world_emissions[['Year','CO2_Tonnes']]\n",
+    "world_emissions.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +517,7 @@
        "'world_emissions has been exported to cvs file'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +694,7 @@
        "4                           27                  244  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +716,7 @@
        "(7385, 12)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +876,7 @@
        "4                           27                  244  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +906,7 @@
        "'vehicles has been exported to cvs file'"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1014,7 @@
        "4              Armenia                                              NaN"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1107,7 @@
        "4              Armenia                                              NaN"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1134,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1218,7 @@
        "5            Australia   2016                    18 326 236"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1305,7 @@
        "5            Australia   2016                       18326236"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1392,7 @@
        "5            Australia  2016                       18326236"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,129 +1403,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Number_of_registered_vehicles</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>563106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Antigua and Barbuda</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>36030</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>21633587</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>18326236</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>7421647</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>157</th>\n",
-       "      <td>United Republic of Tanzania</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2163623</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>158</th>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>281312446</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>159</th>\n",
-       "      <td>Uruguay</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2342026</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>160</th>\n",
-       "      <td>Venezuela (Bolivarian Republic of)</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>7999760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>161</th>\n",
-       "      <td>Viet Nam</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>50666855</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>135 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                Country  Year  Number_of_registered_vehicles\n",
-       "1                               Albania  2016                         563106\n",
-       "2                   Antigua and Barbuda  2016                          36030\n",
-       "3                             Argentina  2016                       21633587\n",
-       "5                             Australia  2016                       18326236\n",
-       "6                               Austria  2016                        7421647\n",
-       "..                                  ...   ...                            ...\n",
-       "157         United Republic of Tanzania  2016                        2163623\n",
-       "158            United States of America  2015                      281312446\n",
-       "159                             Uruguay  2016                        2342026\n",
-       "160  Venezuela (Bolivarian Republic of)  2016                        7999760\n",
-       "161                            Viet Nam  2016                       50666855\n",
-       "\n",
-       "[135 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 169,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#We will take out registered vehicles in 2016, according to previously analyzed data\n",
     "register=register[register.Year.isin(['2015','2015-2016','2016','2016-2017'])]"
@@ -1522,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1429,7 @@
        "'register has been exported to cvs file'"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
