conclusiones definitivas a falta de arreglar/completar graficos

--- a/emissions_analysis.ipynb
+++ b/emissions_analysis.ipynb
@@ -795,26 +795,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Estas sanciones se calcularán a 95 euros el gramo por cada vehículo ligero vendido. Para una cuota de mercado del 1%"
+    "#### Therefore, penalties of 95€ per emitted CO2 gram and vehicule will be applied from 2022 on\n",
+    "#### For a million cars sold in a year:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For a penalty of 95€/g CO2 per vehicle, the total penalty per year would ascend to 0.01 Millions €\n"
+      "For a penalty of 95€/ emitted CO2 gram per vehicle, the total penalty per year would ascend to 2380.51 Millions €\n",
+      "for 100.000 cars sold in Europe\n"
      ]
     }
    ],
    "source": [
     "penalty=95\n",
-    "penalty_year=(round(sales_2016*0.001*mean_emission*penalty/1E6,2))\n",
-    "print(f'For a penalty of {penalty}€/g CO2 per vehicle, the total penalty per year would ascend to {penalty_year} Millions €')"
+    "penalty_year=(round(1E5*mean_emission*penalty/1E6,2))\n",
+    "print(f'For a penalty of {penalty}€/ emitted CO2 gram per vehicle, the total penalty per year would ascend to {penalty_year} Millions €\\nfor 100.000 cars sold in Europe')"
    ]
   }
  ],
